Fixing a nit, the collapsed splitter was drawing as a neutral gray, now it's the color of the main window.
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@6718 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/skin/colors.css
+++ b/feathers/rubberducky/skin/colors.css
@@ -1170,7 +1170,7 @@ These let the user resize the frames in your box model.
 .playlist-splitter[state="collapsed"],
 .playlist-web-splitter[state="collapsed"]
 {
-  background-color: transparent;
+  background-color: #313131 !important;
 }
 
 #control_pane_splitter
